# parlo-cli

./: Cargo.toml
samples/: sample_1.flac
src/: main.rs
