[package]
name = "parlo-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.3", features = ["derive"] }
indoc = "2.0.4"
rubato = { version = "0.14.1" }
symphonia = { version = "0.5.3", features = ["all"] }
whisper-rs = { version = "0.8.0", features = ["cuda"] }
